Complete P2 and add html file

--- a/P2_Image_Classification/dlnd_image_classification.ipynb
+++ b/P2_Image_Classification/dlnd_image_classification.ipynb
@@ -626,52 +626,30 @@
     "    : x: Placeholder tensor that holds image data.\n",
     "    : keep_prob: Placeholder tensor that hold dropout keep probability.\n",
     "    : return: Tensor that represents logits\n",
-    "    \"\"\"\n",
-    "    # Hyper parameters\n",
-    "    conv_num_outputs_1 = 64\n",
-    "    conv_ksize_1 = (3, 3)\n",
-    "    conv_strides_1 = (1, 1)\n",
-    "    pool_ksize_1 = (2, 2)\n",
-    "    pool_strides_1 = (2, 2)\n",
-    "    \n",
-    "    conv_num_outputs_2 = 64\n",
-    "    conv_ksize_2 = (3, 3)\n",
-    "    conv_strides_2 = (2, 2)\n",
-    "    pool_ksize_2 = (2, 2)\n",
-    "    pool_strides_2 = (2, 2)\n",
-    "    \n",
-    "    conv_num_outputs_3 = 64\n",
-    "    conv_ksize_3 = (3, 3)\n",
-    "    conv_strides_3 = (1, 1)\n",
-    "    pool_ksize_3 = (2, 2)\n",
-    "    pool_strides_3 = (2, 2)\n",
-    "    \n",
-    "    fc1_num_outputs = 512\n",
-    "    fc2_num_outputs = 256\n",
-    "    num_outputs = 10 \n",
+    "    \"\"\" \n",
     "    \n",
     "    # TODO: Apply 1, 2, or 3 Convolution and Max Pool layers\n",
     "    #    Play around with different number of outputs, kernel size and stride\n",
     "    # Function Definition from Above:\n",
     "    #    conv2d_maxpool(x_tensor, conv_num_outputs, conv_ksize, conv_strides, pool_ksize, pool_strides)\n",
     "    conv_layer_1 = conv2d_maxpool(x,\n",
-    "                           conv_num_outputs_1,\n",
-    "                           conv_ksize_1,\n",
-    "                           conv_strides_1,\n",
-    "                           pool_ksize_1,\n",
-    "                           pool_strides_1)\n",
+    "                           conv_num_outputs=64,\n",
+    "                           conv_ksize=(3,3),\n",
+    "                           conv_strides=(1,1),\n",
+    "                           pool_ksize=(2,2),\n",
+    "                           pool_strides=(2,2))\n",
     "    conv_layer_2 = conv2d_maxpool(conv_layer_1,\n",
-    "                           conv_num_outputs_2,\n",
-    "                           conv_ksize_2,\n",
-    "                           conv_strides_2,\n",
-    "                           pool_ksize_2,\n",
-    "                           pool_strides_2)\n",
+    "                           conv_num_outputs=64,\n",
+    "                           conv_ksize=(3,3),\n",
+    "                           conv_strides=(2,2),\n",
+    "                           pool_ksize=(2,2),\n",
+    "                           pool_strides=(2,2))\n",
     "    conv_layer_3 = conv2d_maxpool(conv_layer_2,\n",
-    "                           conv_num_outputs_3,\n",
-    "                           conv_ksize_3,\n",
-    "                           conv_strides_3,\n",
-    "                           pool_ksize_3,\n",
-    "                           pool_strides_3)\n",
+    "                           conv_num_outputs=64,\n",
+    "                           conv_ksize=(3,3),\n",
+    "                           conv_strides=(1,1),\n",
+    "                           pool_ksize=(2,2),\n",
+    "                           pool_strides=(2,2))\n",
     "\n",
     "    # TODO: Apply a Flatten Layer\n",
     "    # Function Definition from Above:\n",
@@ -684,10 +662,12 @@
     "    # Function Definition from Above:\n",
     "    #   fully_conn(x_tensor, num_outputs)\n",
     "    # Layer 1\n",
+    "    fc1_num_outputs = 512\n",
     "    fc1 = fully_conn(flatten_layer, fc1_num_outputs)\n",
     "    fc1 = tf.nn.dropout(fc1, keep_prob)\n",
     "    \n",
     "    # Layer 2\n",
+    "    fc2_num_outputs = 256\n",
     "    fc2 = fully_conn(fc1, fc2_num_outputs)\n",
     "    fc2 = tf.nn.dropout(fc2, keep_prob)\n",
     "    \n",
@@ -695,6 +675,7 @@
     "    #    Set this to the number of classes\n",
     "    # Function Definition from Above:\n",
     "    #   output(x_tensor, num_outputs)\n",
+    "    num_outputs = 10\n",
     "    output_layer = output(fc2, num_outputs)\n",
     "    \n",
     "    # TODO: return output\n",
