--- a/P3_TV_Script_Generation/dlnd_tv_script_generation.ipynb
+++ b/P3_TV_Script_Generation/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -326,14 +326,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/arvin/anaconda/lib/python3.5/site-packages/ipykernel/__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
+      "TensorFlow Version: 1.0.0\n",
+      "Default GPU Device: /gpu:0\n"
      ]
     }
    ],
@@ -374,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -427,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -485,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -540,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -594,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -690,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -756,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -765,7 +759,7 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = 50\n",
+    "num_epochs = 100\n",
     "# Batch Size\n",
     "batch_size = 512\n",
     "# RNN Size\n",
@@ -777,7 +771,7 @@
     "# Learning Rate\n",
     "learning_rate = 0.01\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = 100\n",
+    "show_every_n_batches = 50\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -798,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -850,13 +844,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch   0 Batch    0/8   train_loss = 8.822\n",
+      "Epoch   6 Batch    2/8   train_loss = 5.698\n",
+      "Epoch  12 Batch    4/8   train_loss = 4.643\n",
+      "Epoch  18 Batch    6/8   train_loss = 3.788\n",
+      "Epoch  25 Batch    0/8   train_loss = 3.220\n",
+      "Epoch  31 Batch    2/8   train_loss = 2.896\n",
+      "Epoch  37 Batch    4/8   train_loss = 1.960\n",
+      "Epoch  43 Batch    6/8   train_loss = 1.792\n",
+      "Epoch  50 Batch    0/8   train_loss = 1.105\n",
+      "Epoch  56 Batch    2/8   train_loss = 0.971\n",
+      "Epoch  62 Batch    4/8   train_loss = 0.504\n",
+      "Epoch  68 Batch    6/8   train_loss = 0.304\n",
+      "Epoch  75 Batch    0/8   train_loss = 0.266\n",
+      "Epoch  81 Batch    2/8   train_loss = 0.225\n",
+      "Epoch  87 Batch    4/8   train_loss = 0.204\n",
+      "Epoch  93 Batch    6/8   train_loss = 0.206\n",
+      "Model Trained and Saved\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -904,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -931,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -971,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1020,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1068,13 +1086,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moe_szyslak: yeah, i know, i know. but the bad news is we gotta get! it's a pussycat. but was why uh, and with the kids?\n",
+      "lenny_leonard:(sighs)\n",
+      "homer_simpson: mmm guys, because there's good one, but, i'm too late.\n",
+      "marge_simpson: homer, i'm polish.(moans)\n",
+      "moe_szyslak: here, homer it on?\n",
+      "moe_szyslak:(to moe, a dead. he's never stops agent, i gotta be kiddin' in a\" old rummy\"\n",
+      "crowd: do when we can get with a times!\n",
+      "carl_carlson: i mean you did of my beautiful, some guy a\" saint times?(big head)\"\n",
+      "moe_szyslak: this guy a party about me, you i get one of a shred of government 'cause he gave?\n",
+      "moe_szyslak: watch, do.\n",
+      "\n",
+      "\n",
+      "moe_szyslak: my sad! my militia, f-l-a-n-r-d-s, yeah, my car.\n",
+      "marge_simpson: i did. woo god, i ain't never okay?\n",
+      "homer_simpson:(finishing sings) full-bodied...\n",
+      "moe_szyslak:(clears throat\n"
+     ]
+    }
+   ],
    "source": [
     "gen_length = 200\n",
     "# homer_simpson, moe_szyslak, or Barney_Gumble\n",
