Update params for RNN based on feedback

--- a/P3_TV_Script_Generation/dlnd_tv_script_generation.ipynb
+++ b/P3_TV_Script_Generation/dlnd_tv_script_generation.ipynb
@@ -615,7 +615,7 @@
     "    :return: Tuple (Logits, FinalState)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    embeddings = get_embed(input_data, vocab_size, rnn_size)\n",
+    "    embeddings = get_embed(input_data, vocab_size, embed_dim)\n",
     "    outputs, final_state = build_rnn(cell, embeddings)\n",
     "    # initialize weights and biases so that the netword converge\n",
     "    weights = tf.truncated_normal_initializer(stddev = 0.01)\n",
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -759,13 +759,13 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = 100\n",
+    "num_epochs = 200\n",
     "# Batch Size\n",
     "batch_size = 512\n",
     "# RNN Size\n",
-    "rnn_size = 1024\n",
+    "rnn_size = 512\n",
     "# Embedding Dimension Size\n",
-    "embed_dim = None\n",
+    "embed_dim = 512\n",
     "# Sequence Length\n",
     "seq_length = 15\n",
     "# Learning Rate\n",
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -856,21 +856,37 @@
      "output_type": "stream",
      "text": [
       "Epoch   0 Batch    0/8   train_loss = 8.822\n",
-      "Epoch   6 Batch    2/8   train_loss = 5.698\n",
-      "Epoch  12 Batch    4/8   train_loss = 4.643\n",
-      "Epoch  18 Batch    6/8   train_loss = 3.788\n",
-      "Epoch  25 Batch    0/8   train_loss = 3.220\n",
-      "Epoch  31 Batch    2/8   train_loss = 2.896\n",
-      "Epoch  37 Batch    4/8   train_loss = 1.960\n",
-      "Epoch  43 Batch    6/8   train_loss = 1.792\n",
-      "Epoch  50 Batch    0/8   train_loss = 1.105\n",
-      "Epoch  56 Batch    2/8   train_loss = 0.971\n",
-      "Epoch  62 Batch    4/8   train_loss = 0.504\n",
-      "Epoch  68 Batch    6/8   train_loss = 0.304\n",
-      "Epoch  75 Batch    0/8   train_loss = 0.266\n",
-      "Epoch  81 Batch    2/8   train_loss = 0.225\n",
-      "Epoch  87 Batch    4/8   train_loss = 0.204\n",
-      "Epoch  93 Batch    6/8   train_loss = 0.206\n",
+      "Epoch   6 Batch    2/8   train_loss = 5.965\n",
+      "Epoch  12 Batch    4/8   train_loss = 5.275\n",
+      "Epoch  18 Batch    6/8   train_loss = 4.365\n",
+      "Epoch  25 Batch    0/8   train_loss = 3.910\n",
+      "Epoch  31 Batch    2/8   train_loss = 3.367\n",
+      "Epoch  37 Batch    4/8   train_loss = 3.068\n",
+      "Epoch  43 Batch    6/8   train_loss = 2.581\n",
+      "Epoch  50 Batch    0/8   train_loss = 2.251\n",
+      "Epoch  56 Batch    2/8   train_loss = 1.928\n",
+      "Epoch  62 Batch    4/8   train_loss = 1.648\n",
+      "Epoch  68 Batch    6/8   train_loss = 1.423\n",
+      "Epoch  75 Batch    0/8   train_loss = 1.389\n",
+      "Epoch  81 Batch    2/8   train_loss = 1.069\n",
+      "Epoch  87 Batch    4/8   train_loss = 1.209\n",
+      "Epoch  93 Batch    6/8   train_loss = 0.897\n",
+      "Epoch 100 Batch    0/8   train_loss = 0.870\n",
+      "Epoch 106 Batch    2/8   train_loss = 0.581\n",
+      "Epoch 112 Batch    4/8   train_loss = 0.502\n",
+      "Epoch 118 Batch    6/8   train_loss = 0.463\n",
+      "Epoch 125 Batch    0/8   train_loss = 0.491\n",
+      "Epoch 131 Batch    2/8   train_loss = 0.379\n",
+      "Epoch 137 Batch    4/8   train_loss = 0.356\n",
+      "Epoch 143 Batch    6/8   train_loss = 0.295\n",
+      "Epoch 150 Batch    0/8   train_loss = 0.297\n",
+      "Epoch 156 Batch    2/8   train_loss = 0.256\n",
+      "Epoch 162 Batch    4/8   train_loss = 0.233\n",
+      "Epoch 168 Batch    6/8   train_loss = 0.236\n",
+      "Epoch 175 Batch    0/8   train_loss = 0.245\n",
+      "Epoch 181 Batch    2/8   train_loss = 0.222\n",
+      "Epoch 187 Batch    4/8   train_loss = 0.207\n",
+      "Epoch 193 Batch    6/8   train_loss = 0.213\n",
       "Model Trained and Saved\n"
      ]
     }
@@ -922,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -949,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -989,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1038,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1086,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1097,22 +1113,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moe_szyslak: yeah, i know, i know. but the bad news is we gotta get! it's a pussycat. but was why uh, and with the kids?\n",
-      "lenny_leonard:(sighs)\n",
-      "homer_simpson: mmm guys, because there's good one, but, i'm too late.\n",
-      "marge_simpson: homer, i'm polish.(moans)\n",
-      "moe_szyslak: here, homer it on?\n",
-      "moe_szyslak:(to moe, a dead. he's never stops agent, i gotta be kiddin' in a\" old rummy\"\n",
-      "crowd: do when we can get with a times!\n",
-      "carl_carlson: i mean you did of my beautiful, some guy a\" saint times?(big head)\"\n",
-      "moe_szyslak: this guy a party about me, you i get one of a shred of government 'cause he gave?\n",
-      "moe_szyslak: watch, do.\n",
+      "moe_szyslak: aw, the little cutie wants to learn something no / she has an operation, krusty. but stories, my least what, as the guy that's me?\n",
+      "announcer:(excited) oh, i'm can't picture in the bar?\n",
+      "moe_szyslak: better we call.\n",
       "\n",
       "\n",
-      "moe_szyslak: my sad! my militia, f-l-a-n-r-d-s, yeah, my car.\n",
-      "marge_simpson: i did. woo god, i ain't never okay?\n",
-      "homer_simpson:(finishing sings) full-bodied...\n",
-      "moe_szyslak:(clears throat\n"
+      "moe_szyslak: no. i got the cash value at the last idea of my ancestors and my best friend: winnings.\n",
+      "moe_szyslak: oh, moe! thank god...(to moe) hey, wait a minute. don't think i should hear now.\n",
+      "\n",
+      "\n",
+      "lenny_leonard: hurry,, i'd realize you...\n",
+      "moe_szyslak: okay... the world's amazing.\n",
+      "homer_simpson: this detective is unbelievable. he has the soul of you.\n",
+      "moe_szyslak: he's not like that\" the place, moe. and you says moe. you're here, didn't you bring you to make me-- i'm just gonna take the guts!\n",
+      "moe_szyslak: uh, go to the car.\n",
+      "homer_simpson: that's right, i got your restroom to change for dinner.\n",
+      "homer_simpson:\n"
      ]
     }
    ],
